--- a/package.json
+++ b/package.json
@@ -6,9 +6,23 @@
   "repository": "https://github.com/Luis2223/integration-adyen.git",
   "author": "Luis2223 <luis.santos@grupozelo.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js"
+  },
   "dependencies": {
     "@adyen/api-library": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.8.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.1",
+    "sucrase": "^3.15.0"
   }
 }
